Adding Busqueda filter

--- a/Frontend/src/app/components/biblioteca/biblioteca.component.html
+++ b/Frontend/src/app/components/biblioteca/biblioteca.component.html
@@ -11,4 +11,16 @@
             <app-list></app-list>
         </div>
     </div>
+    <br>
+    <hr style="color: #0056b2;" />
+    <br>
+    <div class="row">
+        <div class="col-md-5">
+            <h6 class="text-center">Búsqueda de Libros</h6>
+            <app-busqueda></app-busqueda>
+        </div>
+        <div class="col-md-7">
+
+        </div>
+    </div>
   </div>
